--- a/lec/kalman/index.html
+++ b/lec/kalman/index.html
@@ -428,7 +428,7 @@
 <h3 id="テキスト">テキスト</h3>
 <ul>
   <li>
-    <p>この講義の受講生は [ <a href="https://drive.google.com/open?id=12szHqb-w4jAnyuMotbpLWRMFYLSxXU-C">学内資料版</a> ] をダウンロードしてください．</p>
+    <p>この講義の受講生は [ <a href="https://drive.google.com/open?id=12szHqb-w4jAnyuMotbpLWRMFYLSxXU-C">学内限定版</a> ] をダウンロードしてください．</p>
   </li>
   <li>
     <p>学外の方は [ <a href="https://www.amazon.co.jp/exec/obidos/ASIN/B07XZ37TVS/">書籍版</a> ] をご利用ください．</p>
