--- a/books/pb/index.html
+++ b/books/pb/index.html
@@ -404,17 +404,7 @@
             </nav>
           </aside>
         
-        <h4 id="202032-重要なお知らせ">2020/3/2 重要なお知らせ</h4>
-<ul>
-  <li>
-    <font color="red">Kindle版 69ページ図7.2 (a) のグラフ部分が表示されない不具合が出ており，Amazonが調査中です．解消するまで，販売を見合わせております．
-  ご迷惑をおかけして大変申し訳ございません．</font>
-  </li>
-  <li>ペーパーバック版に，不具合は出ておりません．</li>
-</ul>
-
-<hr />
-<p>「ガチャではじめる確率論入門―確率空間からカルマンフィルタまで」のサポートページです．</p>
+        <p>「ガチャではじめる確率論入門―確率空間からカルマンフィルタまで」のサポートページです．</p>
 
 <ul>
   <li>旧タイトル「<u>Pythonでわかる</u>確率論入門―確率空間からカルマンフィルタまで」
@@ -424,7 +414,7 @@
   </li>
 </ul>
 
-<div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://amzn.to/2Skt1c6" target="_blank"><img src="https://images-fe.ssl-images-amazon.com/images/I/51I%2BkF0ANGL._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://amzn.to/2Skt1c6" target="_blank">[Kindle版]<br />ガチャではじめる確率論入門ー確率空間からカルマンフィルタまで</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://amzn.to/2tPW1z7" target="_blank">吉田勝俊</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em"></div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2019-09-16</div></div></td></tr></table></div>
+<div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://amzn.to/39GeYnG" target="_blank"><img src="https://images-fe.ssl-images-amazon.com/images/I/51I%2BkF0ANGL._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://amzn.to/2Skt1c6" target="_blank">[Kindle版]<br />ガチャではじめる確率論入門ー確率空間からカルマンフィルタまで</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://amzn.to/2tPW1z7" target="_blank">吉田勝俊</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em"></div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2019-09-16</div></div></td></tr></table></div>
 
 <div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://amzn.to/39pSoiq" target="_blank"><img src="https://images-fe.ssl-images-amazon.com/images/I/41MWz0xVatL._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://amzn.to/39pSoiq" target="_blank">[ペーパーバック版]<br />ガチャではじめる確率論入門ー確率空間からカルマンフィルタまで</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://amzn.to/2tPW1z7" target="_blank">吉田勝俊</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em">NextPublishing Authors Press</div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2020-02-17</div></div></td></tr></table></div>
 
@@ -463,6 +453,8 @@
 <h3 id="お知らせ">お知らせ</h3>
 
 <ul>
+  <li>[2020-03-07] Kindle版の入稿データ形式を改め再出版．Amazonの仕様で新版の扱いとなりました</li>
+  <li>[2020-03-02] Kindle版69ページ図7.2 (a) のグラフ部分が，一部端末で非表示となる不具合発生 →出版停止</li>
   <li>[2020-02-05] 改題して再販</li>
   <li>[2019-10-15] ペーパーバック版(2019/10/18販売開始予定)追加</li>
   <li>[2019-10-07] ひとまず開設！</li>
