--- a/lec/colab/index.html
+++ b/lec/colab/index.html
@@ -417,27 +417,12 @@
   <li>Python 自体は，単体で PC にインストールして使うこともできますが，ここではメディア授業を考慮して，Colab 経由でブラウザから実行する方法を学びます．</li>
 </ul>
 
-<h3 id="下準備">下準備</h3>
+<h3 id="目次">目次</h3>
 <ul>
   <li><a href="1/">Colab のインストール</a></li>
 </ul>
 
-<h3 id="目次">目次</h3>
-<ul>
-  <li><a href="2/">Colab の基本操作</a></li>
-  <li><a href="3/">各種演算など</a></li>
-  <li><a href="4/">プログラム・ファイルの作成</a></li>
-  <li><a href="5/">プログラム・ファイルの実行</a></li>
-  <li><a href="6/">グラフの印刷</a></li>
-</ul>
-
-<h3 id="入手方法">入手方法</h3>
-
-<ul>
-  <li><a href="http://www.geocities.jp/rui_hirokawa/scilab/">http://www.geocities.jp/rui_hirokawa/scilab/</a> （日本語ページ．若干情報が古い）</li>
-  <li><a href="http://www.scilab.org/">http://www.scilab.org/</a> （本家）</li>
-  <li>その他，ぐぐると色々ヒットします．</li>
-</ul>
+<p>ただいま工事中</p>
 
         
       </section>
